# odoo-boost

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  release.yml
docs/: agents.md  configuration.md  getting-started.md  guidelines.md  mcp-tools.md  skills.md
src/odoo_boost/: __init__.py  __main__.py
src/odoo_boost/agents/: __init__.py  base.py  claude_code.py  codex.py  copilot.py  cursor.py  gemini_cli.py  junie.py
src/odoo_boost/cli/: __init__.py  app.py  check.py  install.py  mcp_cmd.py  update.py
src/odoo_boost/config/: __init__.py  schema.py  settings.py
src/odoo_boost/connection/: __init__.py  base.py  factory.py  xmlrpc.py
src/odoo_boost/guidelines/: __init__.py  composer.py
src/odoo_boost/guidelines/core/: coding_style.md  controllers.md  javascript_owl.md  module_structure.md  odoo_general.md  orm_best_practices.md  security.md  testing.md  views_and_ui.md
src/odoo_boost/guidelines/core/versions/: v17.md  v18.md  v19.md
src/odoo_boost/mcp_server/: __init__.py  context.py  server.py
src/odoo_boost/mcp_server/tools/: __init__.py  application_info.py  database_query.py  database_schema.py  execute_method.py  get_config.py  get_module_info.py  list_access_rights.py  list_menus.py  list_models.py  list_routes.py  list_views.py  list_workflows.py  read_log_entries.py  search_docs.py  search_records.py
src/odoo_boost/skills/: __init__.py  loader.py
src/odoo_boost/skills/automated_actions/: SKILL.md
src/odoo_boost/skills/controllers_routes/: SKILL.md
src/odoo_boost/skills/creating_models/: SKILL.md
src/odoo_boost/skills/owl_components/: SKILL.md
src/odoo_boost/skills/report_development/: SKILL.md
src/odoo_boost/skills/security_rules/: SKILL.md
src/odoo_boost/skills/testing/: SKILL.md
src/odoo_boost/skills/xml_views/: SKILL.md
tests/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_connection.py  test_guidelines.py  test_skills.py  test_tools.py
