[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-boost"
dynamic = ["version"]
description = "AI coding agents with deep introspection into running Odoo instances via MCP tools"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Odoo Boost Contributors" }]
keywords = ["odoo", "mcp", "ai", "coding-assistant", "boost"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
odoo-boost = "odoo_boost.cli.app:main"

[project.urls]
Homepage = "https://github.com/odoo-boost/odoo-boost"
Repository = "https://github.com/odoo-boost/odoo-boost"

[tool.hatch.version]
path = "src/odoo_boost/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_boost"]

[tool.pytest.ini_options]
testpaths = ["tests"]
