[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-boost"
dynamic = ["version"]
description = "AI coding agents with deep introspection into running Odoo instances via MCP tools"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Jan-Phillip Oesterling", email = "jappi2000@ewetel.net"},
]
maintainers = [
    {name = "Jan-Phillip Oesterling", email = "jappi2000@ewetel.net"},
]
keywords = ["odoo", "mcp", "ai", "coding-assistant", "boost"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
odoo-boost = "odoo_boost.cli.app:main"

[project.urls]
Homepage = "https://github.com/havmedia/odoo-boost"
Repository = "https://github.com/havmedia/odoo-boost"

[tool.hatch.version]
path = "src/odoo_boost/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_boost"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.coverage.run]
source = ["odoo_boost"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
